Fix z-index of cursor

--- a/public/media_support/css/styles.css
+++ b/public/media_support/css/styles.css
@@ -103,4 +103,5 @@ a.start_chat:active{
 	height: 24px;
 	margin: -12px 0 0 -12px;
 	position: absolute;
+	z-index: 9999;
 	}
